# purets

./: LICENSE  README.md  purets.cabal
src/Language/: Ast.hs  Ast.hs.bak  IntBinding.hs  TypeCheck.hs  TypeEnv.hs
tests/: *purets*  test.hs
